<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nu.ndw</groupId>
    <artifactId>OCPI</artifactId>
    <version>1.0.0</version>
    <name>OCPI</name>
    <description>Code behorende bij open api spec OCPI</description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <swagger-codegen-maven-plugin.version>3.0.29</swagger-codegen-maven-plugin.version>
        <swagger-annotations-version>1.5.21</swagger-annotations-version>
        <swagger-core-version>2.0.0</swagger-core-version>
        <okhttp-version>2.7.5</okhttp-version>
        <threetenbp-version>1.3.5</threetenbp-version>
        <maven-plugin-version>1.0.0</maven-plugin-version>
        <junit-version>4.13.1</junit-version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-annotations</artifactId>
            <version>${swagger-core-version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp-version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp</groupId>
            <artifactId>logging-interceptor</artifactId>
            <version>${okhttp-version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-json</artifactId>
            <version>2.5.6</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-web</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
        <!-- test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit-version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <excludes>
                        <exclude>**/swagger/**/*.java</exclude>
                    </excludes>
                    <compilerArgs>
                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>io.swagger.codegen.v3</groupId>-->
<!--                <artifactId>swagger-codegen-maven-plugin</artifactId>-->
<!--                <version>${swagger-codegen-maven-plugin.version}</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <goals>-->
<!--                            <goal>generate</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <language>java</language>-->
<!--                            <configOptions>-->
<!--                                <sourceFolder>java</sourceFolder>-->
<!--                                <dateLibrary>java8</dateLibrary>-->
<!--                            </configOptions>-->
<!--                            <generateSupportingFiles>false</generateSupportingFiles>-->
<!--                            <generateModelDocumentation>false</generateModelDocumentation>-->
<!--                            <generateApiTests>false</generateApiTests>-->
<!--                            <generateApiDocumentation>false</generateApiDocumentation>-->
<!--                            <library>resttemplate</library>-->
<!--                            <output>src/main</output>-->
<!--                            <modelPackage>ocpi.model</modelPackage>-->
<!--                            <generateApis>false</generateApis>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>
</project>
